--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -5,3 +5,8 @@
 .body {
     background-color: black;
 }
+
+.fondo {
+    background-image: url("../../public/images/fondo.jpg");
+    background-repeat: no-repeat;
+}
